# CoderCrucible

./: CC3_TECHNICAL_REVIEW.md  CODEBASE_REPORT.md  Disputation_on_the_power_and_efficacy_of_big_ai.md  INTEGRATION_REPORT.md  README.md  REFACTOR_REPORT.md  REPORT_Search_Anonymization_Fix.md  RESEARCH_REPORT.md  manifesto.txt  pyproject.toml
.claude/skills/dataclaw/: SKILL.md
codercrucible/: cli.py  config.py  enrichment.py  parser.py  search.py
codercrucible/parsers/: __init__.py  base.py  claude.py  cursor.py  schema.py  utils.py
dataclaw/: __init__.py  cli.py  config.py  parser.py  search.py
tests/: conftest.py  test_anonymizer.py  test_cli.py  test_cli_enrichment.py  test_config.py  test_config_getters.py  test_enrichment.py  test_parser.py  test_secrets.py
tests/fixtures/: create_cursor_sample.py  cursor_sample.db
tests/parsers/: __init__.py  test_claude.py  test_cursor.py  test_registry.py
