[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codercrucible"
version = "0.3.0"
description = "Export your Claude Code conversations to Hugging Face as structured training data"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    {name = "Banodoco"},
]
keywords = ["claude-code", "huggingface", "dataset", "conversations", "training-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "huggingface_hub>=0.20.0",
    "scout-core @ git+https://github.com/cyberkrunk69/Scout.git@main",
]

[project.urls]
Homepage = "https://github.com/banodoco/codercrucible"
Repository = "https://github.com/banodoco/codercrucible"
Issues = "https://github.com/banodoco/codercrucible/issues"

[project.scripts]
codercrucible = "codercrucible.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov"]
